--- a/ml.tex
+++ b/ml.tex
@@ -15,6 +15,7 @@
 
 \title{Machine Learning cheatsheet - MITx Micromaster in Statistics and Data Science}
 \author{Alejandro Fernández Camello}
+\Updated by {Pierre Houlbert}
 \date{\vspace{-100pt}}
 
 \setbeamertemplate{navigation symbols}{}
