Added complementary of Union and Inter

--- a/probability.tex
+++ b/probability.tex
@@ -49,6 +49,8 @@ Properties:
     \item $P(A \cup B) = P(A) + P(B) - P(A \cap B)$.
     \item $P(A \cup B) \leq P(A) + P(B)$
     \item $P(A \cup B \cup C) = P(A) + P(A^c \cap B) + P(A^c \cap B^c \cap C)$
+    \item $P((A \cup B)^c) = P(A^c \cap B^c)$
+    \item $P((A \cap B)^c) = P(A^c \cup B^c)$
 \end{itemize}
 
 \end{block}
